syntax = "proto3";

package com.example.springredissoncodecbycache.proto;

import "google/protobuf/timestamp.proto";

message User {
  int64 id_most_sig_bits = 1;
  int64 id_least_sig_bits = 2;
  string name = 3;
  string email = 4;
  string password = 5;
  bool isActive = 6;
  int64 cityUuid_most_sig_bits = 7;
  int64 cityUuid_least_sig_bits = 8;
  google.protobuf.Timestamp dateCreated = 9;
  google.protobuf.Timestamp dateUpdated = 10;
}
